[package]
name = "test-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
image = { version = "0.25.6", features = ["webp", "png"] }
kmeans_colors = "0.7.0"
palette = "0.7.6"
reqwest = { version = "0.12.20", features = ["stream", "gzip"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
futures-util = "0.3.31"
rayon = "1.10.0"


[dev-dependencies]
httpmock = "0.7.0"
